--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreativeCrafters</title>
@@ -9,8 +12,15 @@
 
 <body>
     <div id="wrapper">
-        <header><a href="index.html"><h1>CC</h1></a></header>
-        <nav><a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
+        <header><h1><a href="index.html">CC </a></h1>
+            <div class="topnav">
+  
+                <input type="text" placeholder="Search..">
+              </div>
+            </header>
+        <nav><a href="">artist ally</a> <a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
+        <div  >div</div>
+        <div>div</div>
         <div>div</div>
         <div>div</div>
         <div>div</div>
