--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="text" placeholder="Search..">
               </div>
             </header>
-        <nav><a href="">artist ally</a> <a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
+        <nav><a href="cards.html">artist ally</a> <a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
         <div  >div</div>
         <div>div</div>
         <div>div</div>
