--- a/cards.html
+++ b/cards.html
@@ -39,19 +39,66 @@
             </select>
         </aside>
         <div class="container">
-        <div class="card">
-            <img src="" alt="Avatar" style="width:100%">
+            <div class="card">
+            <img class="fixed-size" src="img\meg-wagener-vuXTB1lR3AY-unsplash.jpg" alt="Avatar" style="width:100%">
             <div class="boxcontainer">
               <h4><b>John Doe</b></h4>
-              <p>Architect & Engineer</p>
+              <p>1.000.000.000kr
+              </p>
+            </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
+                <img class="fixed-size"  src="img\benjamin-white-h5E9p3NG218-unsplash.jpg" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
                   <h4><b>John Doe</b></h4>
-                  <p>Architect & Engineer</p>
+                  <p>1000kr</p>
                 </div>
               </div>
+              <div class="card">
+                <img class="fixed-size"  src="img\Skärmbild 2025-11-27 135300.png" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
+                  <h4><b>John Doe</b></h4>
+                  <p>1000kr</p>
+                </div>
+              </div>
+              <div class="card">
+                <img class="fixed-size"  src="img\emma-shappley-aL2VXe-BuYE-unsplash.jpg" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
+                  <h4><b>John Doe</b></h4>
+                  <p>1000kr</p>
+                </div>
+              </div>
+              <div class="card">
+                <img  class="fixed-size" src="img\mick-haupt-Htt30LUxpBY-unsplash.jpg" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
+                  <h4><b>John Doe</b></h4>
+                  <p>1000kr</p>
+                </div>
+              </div>
+              <div class="card">
+                <img class="fixed-size"  src="img\alexandra-tran-CORxugX6UJU-unsplash.jpg" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
+                  <h4><b>John Doe</b></h4>
+                  <p>1000kr</p>
+                </div>
+              </div>
+              <div class="card">
+                <img class="fixed-size" src="img\ed-junaidi-q4A_erZD6P0-unsplash.jpg" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
+                  <h4><b>John Doe</b></h4>
+                  <p>1000kr</p>
+                </div>
+              </div>
+              <div class="card">
+                <img class="fixed-size" src="img\sibeesh-venu-bS_MR-F5DVs-unsplash.jpg" alt="Avatar" style="width:100%">
+                <div class="boxcontainer">
+                  <h4><b>John Doe</b></h4>
+                  <p>1000kr</p>
+                </div>
+              </div>
+
+              
+              
           </div>
           </div>
 </div>
