--- a/cards.html
+++ b/cards.html
@@ -17,7 +17,8 @@
                 <input type="text" placeholder="Search..">
               </div>
             </header>
-            <nav><a href="cards.html">artist ally</a> <a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
+            <nav><a href="cards.html">artist ally</a>
+             <a href="loginscreen.html">Log in</a> <a href=""></a>link <a href="">link</a> <a href="">link</a></nav>
             <aside class="filter">
                  <select>
                 <option value="volvo"selected>Price(SEK)</option>
@@ -37,6 +38,7 @@
                 <option value="mercedes">200 - 1000 kr</option>
                 <option value="audi">1000kr+</option>
             </select>
+            <input type="range" min="1" max="100">
         </aside>
         <div class="container">
             <div class="card">
