--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <input type="text" placeholder="Search..">
               </div>
             </header>
-        <nav><a href="cards.html">artist ally</a> <a href="">link</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
-        <div  >div</div>
-        <div>div</div>
-        <div>div</div>
-        <div>div</div>
-        <div>div</div>
-        <div>div</div>
+        <nav><a href="cards.html">artist ally</a> <a href="loginscreen.html">Log in</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
+        <div class="pad">div</div>
+        <div class="pad">div</div>
+        <div class="pad">div</div>
+        <div class="pad">div</div>
+        <div class="pad">div</div>
+        <div class="pad">div</div>
 
     </div>
 </body>
