--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                 <input type="text" placeholder="Search..">
               </div>
             </header>
-        <nav><a href="cards.html">artist ally</a> <a href="loginscreen.html">Log in</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
+        <nav><a href="cards.html">artist ally</a>
+            <a href="loginscreen.html">Log in</a> 
+            <a href="">link</a>
+            <a href="">link</a> 
+            <a class="cart" href="shoping_cart.html"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
+            </nav>
         <div class="pad">div</div>
         <div class="pad">div</div>
         <div class="pad">div</div>
