--- a/loginscreen.html
+++ b/loginscreen.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,19 +10,28 @@
     <title>Log in</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="wrapper3">
-    <header><h1><a href="index.html">CC </a></h1>
-        <div class="topnav">
+        <header>
+            <h1><a href="index.html">CC </a></h1>
+            <div class="topnav">
 
-            <input type="text" placeholder="Search..">
-          </div>
+                <input type="text" placeholder="Search..">
+            </div>
         </header>
-    <nav><a href="cards.html">artist ally</a> <a href="loginscreen.html">Log in</a> <a href="">link</a> <a href="">link</a> <a href="">link</a></nav>
-<div></div>
-<div id="login">    <input type="email" name="Email" id="email">
-    <input type="password" name="" id="password"></div>
+        <nav><a href="cards.html">artist ally</a>
+            <a href="loginscreen.html">Log in</a>
+            <a href="">link</a>
+            <a href="">link</a>
+            <a class="cart" href="shoping_cart.html"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
+        </nav>
+        <div></div>
+        <div id="login"> <input type="email" name="Email" id="email">
+            <input type="password" name="" id="password">
+        </div>
 
-</div>
+    </div>
 </body>
+
 </html>
