--- a/cards.html
+++ b/cards.html
@@ -14,7 +14,7 @@
 <body>
   <div id="wrapper2">
     <header>
-      <h1><a href="index.html">CC </a></h1>
+      <h1><a href="index.html"><img class="logo" src="img\Namnlöst-1-Återställd.png" alt=""> </a></h1>
       <div class="topnav">
 
         <input type="text" placeholder="Search..">
