--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreativeCrafters</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,12 +27,18 @@
             <a href="">link</a> 
             <a class="cart" href="shoping_cart.html"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
             </nav>
-        <div class="pad">div</div>
-        <div class="pad">div</div>
-        <div class="pad">div</div>
-        <div class="pad">div</div>
-        <div class="pad">div</div>
-        <div class="pad">div</div>
+        <div class="pad"><p>Annons:</p>
+            <img src="img\o-SUBWAY-ONION-facebook-3062998317 (1).jpg"  alt=""></div>
+        <div class="padtext"><h2>Om oss</h2>
+            Välkommen till CreativeCrafters, den kreativa marknadsplatsen där konst och hantverk möter digital innovation. Vi brinner för att ge konstnärer och kreativa skapare en plats där deras arbete får synas, uppskattas och nå ut till människor som värdesätter unika, handgjorda produkter.
+
+            <P>Vi vet att varje konstverk bär på en historia – timmar av arbete, känslor och idéer. Därför vill vi skapa en plattform som gör det enkelt och tryggt för konstnärer att sälja sina verk, samtidigt som vi erbjuder konstälskare en inspirerande miljö fylld av originalitet och personlighet.CreativeCrafters är mer än bara en digital butik; det är ett community. Här samlas människor som älskar kreativitet, oavsett om de själva skapar eller söker något som verkligen sticker ut. Vi vill uppmuntra nya talanger, stötta små kreatörer och göra det lättare för alla att upptäcka konst som känns äkta och unik.</P></div>
+        <div class="pad"><p>Annons:</p>
+            <img src="img\5lpzcp-3251316052.jpg" alt=""></div>
+        <div class="pad"><img src="img\3f34fb0b53bb80726f1df824877ce93a-2261716163.jpg" alt=""></div>
+        <div class="padtext"><h2>Vad vi står för</h2>
+            Med vår huvudfärg <hej>#FF5733</hej>, som symboliserar energi, kreativitet och passion, strävar vi efter att bygga en plattform som känns varm, välkomnande och inspirerande – precis som konstvärlden ska vara. På CreativeCrafters tror vi att kreativitet för människor samman. Genom att samla konstnärer och konstentusiaster på en och samma plats skapar vi möjligheter för nya möten, nya uttryck och nya sätt att tänka. <P> <b> CreativeCrafters – där handgjorda drömmar får liv och hittar sitt hem.</b></P></div>
+        <div class="pad"><img src="img\s-photo-u1.jpg" alt=""></div>
 
     </div>
 </body>
