pre test version

--- a/cards.html
+++ b/cards.html
@@ -10,14 +10,21 @@
   <title>artist ally</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Instrument+Serif:ital@0;1&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Geom:ital,wght@0,300..900;1,300..900&family=Instrument+Serif:ital@0;1&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <div id="wrapper2">
     <header>
-      <h1><a href="index.html"><img class="logo" src="img\Namnlöst-1-Återställd.png" alt=""> </a></h1>
+      <h1><a href="index.html"><img class="logo" src="img\logocc.png" alt=""> </a></h1>
       <div class="topnav">
 
         <input type="text" placeholder="Search..">
