--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shopping cart</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>shopping cart</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Instrument+Serif:ital@0;1&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Geom:ital,wght@0,300..900;1,300..900&family=Instrument+Serif:ital@0;1&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
-    <div id="wrapper3">
-        <header>
-          <h1><a href="index.html"><img class="logo" src="img\Namnlöst-1-Återställd.png" alt=""> </a></h1>
-          <div class="topnav">
-    
-            <input type="text" placeholder="Search..">
-          </div>
-        </header>
-        <nav>
-          <a href="cards.html">artist ally</a>
-          <a href="loginscreen.html">Log in</a>
-          <a href="">link</a>
-          <a href="">link</a>
-          <a class="cart"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
-        </nav>
-        <div class="shopcart">
-<h1>Your cart is emty</h1>
-<p>Cost of item: 0.00 kr</p>
-<p>Cost of shiping: 0.00 kr</p>
-<p>Tax: 0.00 kr</p>
-<p>Amount to pay: 0.00 kr</p>
-<button>pay</button>
-        </div>
-        <footer>
+  <div id="wrapper3">
+    <header>
+      <h1><a href="index.html"><img class="logo" src="img\logocc.png" alt=""> </a></h1>
+      <div class="topnav">
 
-        </footer>
+        <input type="text" placeholder="Search..">
+      </div>
+    </header>
+    <nav>
+      <a href="cards.html">artist ally</a>
+      <a href="loginscreen.html">Log in</a>
+      <a href="">link</a>
+      <a href="">link</a>
+      <a class="cart"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
+    </nav>
+    <div class="shopcart">
+      <h1>Your cart is emty</h1>
+      <p>Cost of item: 0.00 kr</p>
+      <p>Cost of shiping: 0.00 kr</p>
+      <p>Tax: 0.00 kr</p>
+      <p>Amount to pay: 0.00 kr</p>
+      <button>pay</button>
+    </div>
+    <footer>
 
-        </div>
+    </footer>
+
+  </div>
 </body>
+
 </html>
