--- a/cards.html
+++ b/cards.html
@@ -24,7 +24,7 @@
 <body>
   <div id="wrapper2">
     <header>
-      <h1><a href="index.html"><img class="logo" src="img\logocc.png" alt=""> </a></h1>
+      <h1><a href="index.html"><img class="logo" src="img/logocc.png" alt=""> </a></h1>
       <div class="topnav">
 
         <input type="text" placeholder="Search..">
@@ -35,32 +35,32 @@
       <a href="loginscreen.html">Log in</a>
       <a href="">link</a>
       <a href="">link</a>
-      <a class="cart" href="shoping_cart.html"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
+      <a class="cart" href="shoping_cart.html"><img src="img/shopping-cart-solid-icon-size_32.png" alt=""></a>
     </nav>
     <aside class="filter">
       <select>
-        <option value="volvo" selected>Price(SEK)</option>
-        <option value="saab">under 200kr</option>
-        <option value="mercedes">200 - 1000 kr</option>
-        <option value="audi">1000kr+</option>
+        <option selected>Price(SEK)</option>
+        <option>under 200kr</option>
+        <option>200 - 1000 kr</option>
+        <option>1000kr+</option>
       </select>
       <select>
-        <option value="volvo" selected>ship from</option>
-        <option value="saab">anywhere</option>
-        <option value="mercedes">Sweden</option>
-        <option value="audi">Not Sweden</option>
+        <option selected>ship from</option>
+        <option>anywhere</option>
+        <option>Sweden</option>
+        <option>Not Sweden</option>
       </select>
       <select>
-        <option value="volvo" selected>Price(SEK)</option>
-        <option value="saab">under 200kr</option>
-        <option value="mercedes">200 - 1000 kr</option>
-        <option value="audi">1000kr+</option>
+        <option selected>Price(SEK)</option>
+        <option>under 200kr</option>
+        <option>200 - 1000 kr</option>
+        <option>1000kr+</option>
       </select>
       <input type="range" min="1" max="100">
     </aside>
     <div class="container">
       <div class="card">
-        <img class="fixed-size" src="img\meg-wagener-vuXTB1lR3AY-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/meg-wagener-vuXTB1lR3AY-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>John Doe</b></h4>
           <p>1.000.000.000kr
@@ -68,49 +68,49 @@
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\benjamin-white-h5E9p3NG218-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/benjamin-white-h5E9p3NG218-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>John Doe</b></h4>
           <p>1000kr</p>
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\Skärmbild 2025-11-27 135300.png" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/Skärmbild-2025-11-27-135300.png" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>Jane Doe</b></h4>
           <p>1000kr</p>
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\emma-shappley-aL2VXe-BuYE-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/emma-shappley-aL2VXe-BuYE-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>John Doe</b></h4>
           <p>1000kr</p>
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\mick-haupt-Htt30LUxpBY-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/mick-haupt-Htt30LUxpBY-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>Jane Doe</b></h4>
           <p>1000kr</p>
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\alexandra-tran-CORxugX6UJU-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/alexandra-tran-CORxugX6UJU-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>John Doe</b></h4>
           <p>1000kr</p>
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\ed-junaidi-q4A_erZD6P0-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/ed-junaidi-q4A_erZD6P0-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>Jane Doe</b></h4>
           <p>1000kr</p>
         </div>
       </div>
       <div class="card">
-        <img class="fixed-size" src="img\sibeesh-venu-bS_MR-F5DVs-unsplash.jpg" alt="Avatar" style="width:100%">
+        <img class="fixed-size" src="img/sibeesh-venu-bS_MR-F5DVs-unsplash.jpg" alt="Avatar" style="width:100%">
         <div class="boxcontainer">
           <h4><b>John Doe</b></h4>
           <p>1000kr</p>
@@ -121,7 +121,7 @@
 
     </div>
   </div>
-  </div>
+  
 
 </body>
 
