--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -23,7 +25,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1><a href="index.html"><img class="logo" src="img\logocc.png" alt=""> </a></h1>
+            <h1><a href="index.html"><img class="logo" src="img/logocc.png" alt=""> </a></h1>
             <div class="topnav">
 
                 <input type="text" placeholder="Search..">
@@ -33,11 +35,11 @@
             <a href="loginscreen.html">Log in</a>
             <a href="">link</a>
             <a href="">link</a>
-            <a class="cart" href="shoping_cart.html"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
+            <a class="cart" href="shoping_cart.html"><img src="img/shopping-cart-solid-icon-size_32.png" alt=""></a>
         </nav>
         <div class="pad">
             <p>Annons:</p>
-            <img src="img\o-SUBWAY-ONION-facebook-3062998317 (1).jpg" alt="">
+            <img src="img/subwayad.jpg" alt="">
         </div>
         <div class="padtext">
             <h2>Om oss</h2>
@@ -53,9 +55,9 @@
         </div>
         <div class="pad">
             <p>Annons:</p>
-            <img src="img\5lpzcp-3251316052.jpg" alt="">
+            <img src="img/5lpzcp-3251316052.jpg" alt="">
         </div>
-        <div class="pad"><img src="img\3f34fb0b53bb80726f1df824877ce93a-2261716163.jpg" alt=""></div>
+        <div class="pad"><img src="img/3f34fb0b53bb80726f1df824877ce93a-2261716163.jpg" alt=""></div>
         <div class="padtext">
             <h2>Vad vi står för</h2>
             Med vår huvudfärg <hej>#FF5733</hej>, som symboliserar energi, kreativitet och passion, strävar vi efter att
@@ -64,7 +66,7 @@
             konstentusiaster på en och samma plats skapar vi möjligheter för nya möten, nya uttryck och nya sätt att
             tänka. <P> <b> CreativeCrafters – där handgjorda drömmar får liv och hittar sitt hem.</b></P>
         </div>
-        <div class="pad"><img src="img\s-photo-u1.jpg" alt=""></div>
+        <div class="pad"><img src="img/s-photo-u1.jpg" alt=""></div>
 
     </div>
 </body>
