--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -24,7 +24,7 @@
 <body>
   <div id="wrapper3">
     <header>
-      <h1><a href="index.html"><img class="logo" src="img\logocc.png" alt=""> </a></h1>
+      <h1><a href="index.html"><img class="logo" src="img/logocc.png" alt=""> </a></h1>
       <div class="topnav">
 
         <input type="text" placeholder="Search..">
@@ -35,7 +35,7 @@
       <a href="loginscreen.html">Log in</a>
       <a href="">link</a>
       <a href="">link</a>
-      <a class="cart"><img src="img\shopping-cart-solid-icon-size_32.png" alt=""></a>
+      <a class="cart"><img src="img/shopping-cart-solid-icon-size_32.png" alt=""></a>
     </nav>
     <div class="shopcart">
       <h1>Your cart is emty</h1>
